--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 playGUI-- formation, odk, 
-PrePlayGUI - yardline, (dist,hash)
-resultGUI - result, gl, play type
+PrePlayGUI - yardline, (dist,hash) - numerical enter
+resultGUI - result, gl, play type- buttons in two columns and then numerical input
 
 
 
