finished full prototype

--- a/TODO.txt
+++ b/TODO.txt
@@ -13,9 +13,7 @@ sends data to one object of completeplay which records it
 next up
 add quit functions- rn it needs check
 expand buttons in playresult
-build playGUI
 build PrePlayGUI
-
-
+rewrite gainloss 
 
 
